--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-root-siblings": "^5.0.1",
-    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "sonner-native": "^0.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
